<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Viewer</string>
    <string name="action_settings">Settings</string>
    <string name="play">play</string>
    <string name="stop">stop</string>
    <string name="action_load">Load File</string>
    <string name="title_activity_setting">Settings</string>
    <string name="background_colour">Background Colour</string>
    <string name="fps">FPS:</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="preview">Preview</string>
    <string name="choose_file">Choose a file to load</string>
    <string name="title_activity_filechooser">JSON File Chooser</string>
    <string name="zero">none</string>
    <string name="apply">Apply</string>

</resources>