<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SettingActivity" >

        <TextView
            android:id="@+id/fpsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/fps"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/fps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/fpsText"
            android:layout_alignBottom="@id/fpsText"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@id/fpsText"
            android:ems="3"
            android:inputType="number"
            android:maxLength="3" >
        </EditText>

        <TextView
            android:id="@+id/backgroundText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/fpsText"
            android:layout_below="@+id/fps"
            android:layout_marginTop="18dp"
            android:text="@string/background_colour"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/redSeek"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/backgroundText"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/backgroundText" />

        <SeekBar
            android:id="@+id/blueSeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/greenSeek"
            android:layout_below="@+id/greenSeek"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/backgroundText" />

        <SeekBar
            android:id="@+id/greenSeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/redSeek"
            android:layout_below="@+id/redSeek"
            android:layout_marginTop="17dp"
            android:layout_toRightOf="@+id/backgroundText" />

        <TextView
            android:id="@+id/greenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/blueSeek"
            android:layout_alignLeft="@+id/redText"
            android:text="@string/green" />

        <TextView
            android:id="@+id/blueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/blueSeek"
            android:layout_alignLeft="@+id/greenText"
            android:text="@string/blue" />

        <TextView
            android:id="@+id/redText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/redSeek"
            android:layout_alignRight="@+id/fps"
            android:text="@string/red" />

        <Button
            android:id="@+id/previewArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/blueText"
            android:layout_alignLeft="@+id/backgroundText"
            android:layout_alignTop="@+id/redSeek"
            android:enabled="false"
            android:text="@string/preview" />

        <Button
            android:id="@+id/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/red"
            android:layout_below="@+id/red"
            android:background="@drawable/orange"
            android:onClick="colorChanged" />

        <Button
            android:id="@+id/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/orange"
            android:layout_alignBottom="@+id/orange"
            android:layout_alignLeft="@+id/green"
            android:background="@drawable/yellow"
            android:onClick="colorChanged" />

        <Button
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/yellow"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:onClick="applyClicked"
            android:text="@string/apply" />

        <Button
            android:id="@+id/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/yellow"
            android:layout_alignBottom="@+id/yellow"
            android:layout_alignLeft="@+id/blue"
            android:background="@drawable/white"
            android:onClick="colorChanged" />

        <Button
            android:id="@+id/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/white"
            android:layout_alignBottom="@+id/white"
            android:layout_alignLeft="@+id/brown"
            android:background="@drawable/black"
            android:onClick="colorChanged" />

        <Button
            android:id="@+id/brown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/black"
            android:layout_toEndOf="@+id/blue"
            android:layout_toRightOf="@+id/white"
            android:background="@drawable/brown"
            android:onClick="colorChanged" />

        <Button
            android:id="@+id/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/previewArea"
            android:layout_below="@+id/previewArea"
            android:layout_marginTop="30dp"
            android:background="@drawable/red"
            android:onClick="colorChanged" />

        <Button
            android:id="@+id/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/orange"
            android:layout_toRightOf="@+id/orange"
            android:background="@drawable/green"
            android:onClick="colorChanged" />

        <Button
            android:id="@+id/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/white"
            android:layout_toRightOf="@+id/blueText"
            android:background="@drawable/blue"
            android:onClick="colorChanged" />
    </RelativeLayout>

</ScrollView>